// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`artworks controller DELETE endpoints deleteArtworks should respond with status 200 and correct body 1`] = `
{
  "acknowledged": true,
  "deletedCount": 2,
}
`;

exports[`artworks controller GET endpoints getArtwork should respond with status 200 and correct body 1`] = `
{
  "artwork": {
    "__v": 0,
    "_id": "66ce0bf156199c1b8df5db7d",
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "Title",
      },
    ],
    "collectionName": "collection",
    "createdAt": "2024-09-10T12:17:12.821Z",
    "updatedAt": "2024-09-10T12:17:12.821Z",
  },
}
`;

exports[`artworks controller GET endpoints getArtworksBySearchTextMatchedInTopmostCategory should respond with status 200 and correct body 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "680d3aaa071644252a168caa",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "Searched Text",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2025-04-26T19:57:30.007Z",
      "updatedAt": "2025-04-26T19:57:30.007Z",
    },
  ],
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - advanced search 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - no filtering 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller GET endpoints getArtworksForPage should respond with status 200 and correct body - quicksearch 1`] = `
{
  "artworks": [
    {
      "__v": 0,
      "_id": "66ce0bf156199c1b8df5db7d",
      "categories": [
        {
          "name": "Tytuł",
          "subcategories": [],
          "value": "testowy",
        },
      ],
      "collectionName": "collection",
      "createdAt": "2024-10-22T20:12:12.209Z",
      "updatedAt": "2024-10-22T20:12:12.209Z",
    },
  ],
  "currentPage": 1,
  "pageSize": 10,
  "total": 1,
}
`;

exports[`artworks controller POST endpoints createArtwork should respond with status 201 and correct body 1`] = `
{
  "artwork": {
    "__v": 0,
    "_id": "66ce0bf156199c1b8df5db7d",
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "value": "Title",
      },
    ],
    "collectionName": "collection",
    "createdAt": "2024-08-27T17:25:05.352Z",
    "updatedAt": "2024-08-27T17:25:05.352Z",
  },
  "failedUploadsCount": 0,
  "failedUploadsFilenames": [],
  "savedFilesCount": 0,
}
`;

exports[`artworks controller PUT endpoints editArtwork should respond with status 201 and correct body 1`] = `
{
  "acknowledged": true,
  "matchedCount": 1,
  "modifiedCount": 1,
  "upsertedCount": 0,
  "upsertedId": null,
}
`;
